--- a/bsbdock.nexus_context/Dockerfile_nexus_2.0.0_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_2.0.0_linux-arm
@@ -8,36 +8,49 @@
 # How to invoke a shell into this container:
 # docker run --rm -it bsbdock/nexus:dev bash
 #
-FROM python:3.9
-RUN set -eux
+FROM alpine AS qemu
+
+#QEMU Download
+ENV QEMU_URL https://github.com/balena-io/qemu/releases/download/v6.0.0%2Bbalena1/qemu-6.0.0.balena1-arm.tar.gz
+RUN apk add curl && curl -L ${QEMU_URL} | tar zxvf - -C . --strip-components 1
+
+FROM balenalib/armv7hf-python:3.9
+# Add QEMU
+COPY --from=qemu qemu-arm-static /usr/bin
 
 # Set timezone and interactive mode
 ENV TZ=Europe/Berlin DEBIAN_FRONTEND=noninteractive
-# set environment variables for python
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
 
 # Update base image if necessary
-RUN apt-get -y update && apt-get -y upgrade &&\
-    apt-get -y install tzdata sudo
+RUN apt-get -y update && apt-get -y upgrade
+# SHELL ["/bin/bash", "-c"]
 
 # Install some optional helper tools
 RUN apt-get -y install mc nano vim screen
 
-# Install and upgrde pip3
-RUN apt-get -y install python3-pip &&\
-    pip3 install --upgrade pip
+RUN apt-get install tzdata
 
-# Build essentials and install rust
-RUN apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 &&\
-    curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
-ENV PATH="/root/.cargo/bin:$PATH"
+# Bootstrap pip3
+RUN curl -sS https://bootstrap.pypa.io/get-pip.py | python3
 
-# Install requiered python packages
-RUN pip3 install cryptography
+# Intsall build essentials
+RUN apt-get -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 libpq-dev
+
+# Build and install Rust and cryptography and other Python packages using a temporary fs (buildkit requiered)
+# to overcome the qmenu cargo filesystem issue (takes a very long time to complete approx. 20min)
+RUN --mount=type=tmpfs,target=/root/.cargo \
+    curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly && \
+    export PATH="/root/.cargo/bin:$PATH" && \
+    pip3 install cryptography && \
+    pip3 install rns lxmf nomadnet rnodeconf requests && \
+    pip3 install Django gunicorn psycopg2-binary gevent && \
+    cp -r /root/.cargo /root/.cargo.bak
+RUN cp -rT /root/.cargo.bak /root/.cargo && rm -R /root/.cargo.bak
+
+##########
 
 # Install components for django production deplyment
-#RUN apt-get -y install systemctl uwsgi uwsgi-plugin-python3 nginx
+RUN apt-get -y install systemctl uwsgi uwsgi-plugin-python3 nginx
 RUN apt-get -y install nginx systemctl &&\
     systemctl enable nginx
 
@@ -45,14 +58,9 @@ RUN apt-get -y install nginx systemctl &&\
 RUN apt-get -y install direwolf
 
 # grab gosu for easy step-down from root and check if it works
-RUN	apt-get update &&\
-   	apt-get install -y gosu &&\
+RUN	apt-get install -y gosu &&\
    	rm -rf /var/lib/apt/lists/* &&\
     gosu nobody true
-
-# Set Home dir and path fpr user bsb
-ENV HOME /home/bsb
-ENV PATH="$HOME/.local/bin:$PATH"
 
 # Add local user 'bsb'
 RUN groupadd -r bsb --gid=9001 && useradd -r -g bsb -m --uid=9001 bsb
@@ -60,12 +68,12 @@ RUN groupadd -r bsb --gid=9001 && useradd -r -g bsb -m --uid=9001 bsb
 RUN echo "bsb ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/bsb && \
     chmod 0440 /etc/sudoers.d/bsb
 
-# Switch to user bsb
+# Set Home dir and path fpr user bsb
+ENV HOME /home/bsb
+ENV PATH="$HOME/.local/bin:$PATH"
+ENV HOME /home/bsb
 USER bsb
 WORKDIR $HOME
-
-# Install requiered python packages
-RUN pip3 install rns lxmf nomadnet rnodeconf requests pytz Django gunicorn psycopg2-binary gevent
 
 # Change to root
 USER root
@@ -99,7 +107,7 @@ RUN chmod +x manage.py
 RUN mkdir static
 
 # Collect static files
-#RUN python manage.py collectstatic --no-input --clear
+RUN python manage.py collectstatic --no-input --clear
 RUN ./manage.py collectstatic --no-input --clear &&\
     ./manage.py flush --no-input
 
