Django Server RNS Test - New generic build script

--- a/.env
+++ b/.env
@@ -22,13 +22,13 @@
 
 # Default dockerfile used for docker-compose build is Dockerfile_nexus_dev_linux-arm
 # If your local environment differs uncomment and change the required setting
-#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
-#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
-#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
+#NEXUS_DOCKERFILE=./Dockerfile_nexus_latest_linux-arm
+#NEXUS_DOCKERFILE=./Dockerfile_nexus_latest_linux-arm64
+#NEXUS_DOCKERFILE=./Dockerfile_nexus_latest_linux-amd64
 
 # Default container configuration used in default docker-compose.yml
 # If your local environment differs uncomment and change the required setting
-#NEXUS_IMAGE=bsbdock/nexus
+#NEXUS_IMAGE=bsbdock/nexus:latest
 #NEXUS_CONTAINER=nexus-server_node01
 #NEXUS_CONTAINER_ALIAS=nexus-server_node01
 #NEXUS_NETWORK=nexus-server_net
@@ -40,15 +40,29 @@
 #NEXUS_PORT_JSONAPI=127.0.0.1:4281
 #NEXUS_PORT_JSONAPI=4281
 #NEXUS_RNODE_DEVICE=/dev/tty0
-#NEXUS_COMMAND=start.sh
+#NEXUS_COMMAND=start_nexus_legacy.sh
+
+# Default reticulum configuration
+#RNS_CONFIG=/home/bsb/.reticulum
+#RNS_AUTOSTART=True
+
+# Default nomadnet configuration
+#NOMANDNET_CONFIG=/home/bsb/.nomadnetwork
+#NOMADNETWORK_AUTOSTART=True
+
+# Default direwolf configuration
+#DIREWOLF_CONFIG=/home/bsb/.direwolf
+#DIREWOLF_AUTOSTART=False
 
 # Default nexus server configuration
 # If your local environment differs uncomment and change the required setting
-#NEXUS_CONFIG=
+#NEXUS_CONFIG=/home/bsb/.nexus
 #NEXUS_PORT=4281
 #NEXUS_ASPECT=home
-#HINT: No white space characters are allowed within json strings used as parameters for nexus server
 #NEXUS_ROLE={"cluster":"home"}
+#NEXUS_LONGPOLL=17280
+#NEXUS_TIMEOUT=43200
+#NEXUS_BRIDGE=[]
 
 # Default Django SuperUser settings
 #DJANGO_SUPERUSER_USERNAME=admin
@@ -66,6 +80,9 @@
 # My personal default development configuration
 # This section can be safely removed
 # Configuration for Cockpit Dev Environment
+RNS_AUTOSTART=True
+NOMADNETWORK_AUTOSTART=True
+DIREWOLF_AUTOSTART=True
 NEXUS_COMPOSE_HOME=~/nexus_cockpit
 NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
 NEXUS_IMAGE=bsbdock/nexus:dev
@@ -80,4 +97,4 @@ NEXUS_LONGPOLL=60
 NEXUS_TIMEOUT=70
 NEXUS_ROLE={"cluster":"cockpit"}
 NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
-NEXUS_COMMAND=start_django.sh
+NEXUS_COMMAND=start_nexus.sh
