--- a/.env
+++ b/.env
@@ -54,6 +54,10 @@
 #DIREWOLF_CONFIG=/home/bsb/.direwolf
 #DIREWOLF_AUTOSTART=False
 
+# Default soundmodem configuration
+#SOUNDMODEM_CONFIG=/home/bsb/.soundmodem
+#SOUNDMODEM_AUTOSTART=False
+
 # Default nexus server configuration
 # If your local environment differs uncomment and change the required setting
 #NEXUS_CONFIG=/home/bsb/.nexus
