--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@
 # Environment used by docker-compose
 #
 # git clone https://github.com/HarlekinSimplex/nexus.git
-# docker run --rm -it -v "$(pwd)".reticulum:/home/bsb/.reticulum -v "$(pwd)".nomadnetwork:/home/bsb/.nomadnetwork -v "$(pwd)".nexus:/home/bsb/.nexus bsbdock/nexus:dev_linux-amd64 bash# docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus python3 /bsb/nexus_server/nexus_server.py
+# docker run --rm -it -v "$(pwd)".reticulum:/home/bsb/.reticulum -v "$(pwd)".nomadnetwork:/home/bsb/.nomadnetwork -v "$(pwd)".nexus:/home/bsb/.nexus bsbdock/nexus:dev_linux-amd64 bash
+# docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus python3 /bsb/nexus_server/nexus_server.py
 # docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus:dev_linux-amd64 python3 /bsb/nexus_server/nexus_server.py
 # docker run --rm -it bsbdock/nexus:dev bash
 # docker exec -it nexus-server_node01 bash
