--- a/.env
+++ b/.env
@@ -48,8 +48,8 @@
 #RNS_AUTOSTART=True
 
 # Default nomadnet configuration
-#NOMANDNET_CONFIG=/home/bsb/.nomadnetwork
-#NOMADNETWORK_AUTOSTART=True
+#NOMADNET_CONFIG=/home/bsb/.nomadnetwork
+#NOMADNET_AUTOSTART=True
 
 # Default direwolf configuration
 #DIREWOLF_CONFIG=/home/bsb/.direwolf
