--- a/.env
+++ b/.env
@@ -85,9 +85,10 @@
 # My personal default development configuration
 # This section can be safely removed
 # Configuration for Cockpit Dev Environment
-RNS_AUTOSTART=True
-NOMADNETWORK_AUTOSTART=True
-DIREWOLF_AUTOSTART=True
+RNS_AUTOSTART=False
+NOMADNETWORK_AUTOSTART=False
+DIREWOLF_AUTOSTART=False
+SOUNDMODEM_AUTOSTART=False
 NEXUS_COMPOSE_HOME=~/nexus_cockpit
 NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
 NEXUS_IMAGE=bsbdock/nexus:dev
