--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-arm
@@ -26,7 +26,8 @@ RUN apt-get -y update && apt-get -y upgrade
 # SHELL ["/bin/bash", "-c"]
 
 # Install some optional helper tools
-RUN apt-get -y install mc nano vim screen unzip
+RUN apt-get -y install mc nano vim screen
+RUN apt-get -y install unzip
 
 RUN apt-get install tzdata
 
