--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-arm
@@ -27,7 +27,7 @@ RUN apt-get -y update && apt-get -y upgrade
 
 # Install some optional helper tools
 RUN apt-get -y install mc nano vim screen
-RUN apt -y install unzip
+RUN yum install unzip
 
 RUN apt-get install tzdata
 
