--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,8 @@ services:
     devices:
 # USB Port mapped to container to be used by RNode LoRa interface
       - ${NEXUS_RNODE_DEVICE:-/dev/tty0}:/dev/ttyLORA
+# USB Port mapped to container to be used by TNC software
+      - ${NEXUS_TNC_DEVICE:-/dev/tty1}:/dev/ttyTNC
     env_file:
       - .env
     networks:
