--- a/.env
+++ b/.env
@@ -41,6 +41,7 @@
 #NEXUS_PORT_JSONAPI=127.0.0.1:4281
 #NEXUS_PORT_JSONAPI=4281
 #NEXUS_RNODE_DEVICE=/dev/tty0
+#NEXUS_TNC_DEVICE=/dev/tty1
 #NEXUS_COMMAND=start_nexus_legacy.sh
 
 # Default reticulum configuration
