--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-arm64
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-arm64
@@ -63,10 +63,13 @@ RUN	apt-get install -y gosu &&\
     gosu nobody true
 
 # Add local user 'bsb'
+ARG CACHEBUST=1
 RUN groupadd -r bsb --gid=9001 && useradd -r -g bsb -m --uid=9001 bsb
 # Grant him sudo privileges
 RUN echo "bsb ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/bsb && \
-    chmod 0440 /etc/sudoers.d/bsb
+    chmod 0440 /etc/sudoers.d/bsb \
+# Grant user access to serial interfaces \
+RUN adduser bsb dialout
 
 # Set Home dir and path fpr user bsb
 ENV HOME /home/bsb
@@ -78,7 +81,6 @@ WORKDIR $HOME
 # Change to root
 USER root
 # Copy ressources from context into bsb home
-ARG CACHEBUST=1
 COPY . .
 # Set ownership to usr bsb
 RUN chown -R bsb:bsb $HOME
