--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-arm64
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-arm64
@@ -105,7 +105,7 @@ RUN pip3 install -r ./requirements.txt
 # Move to Django
 WORKDIR $HOME/nexus_django
 # Make manage.py executable
-RUN chmod +x manage.py
+RUN chmod +x $HOME/nexus_django/manage.py
 # Create folder for static files
 RUN mkdir static
 
