--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-arm
@@ -2,7 +2,7 @@
 # bsbdock/nexus Dockerfile
 #
 # How to build this container:
-# bash build.sh arm
+# bash buildx.sh arm
 # docker run --rm -it bsbdock/nexus:dev bash
 #
 # How to invoke a shell into this container:
