--- a/.env
+++ b/.env
@@ -55,10 +55,20 @@
 # Default direwolf configuration
 #DIREWOLF_CONFIG=/home/bsb/.direwolf
 #DIREWOLF_AUTOSTART=False
+#DIREWOLF_SOUND_CARD=1
+#DIREWOLF_SPEAKER_VOLUME=80%
+#DIREWOLF_MIC_VOLUME=80%
+#DIREWOLF_MIC_AGC=off
 
 # Default soundmodem configuration
 #SOUNDMODEM_CONFIG=/home/bsb/.soundmodem
 #SOUNDMODEM_AUTOSTART=False
+#SOUNDMODEM_CONFIG=/home/bsb/.direwolf
+#SOUNDMODEM_AUTOSTART=False
+#SOUNDMODEM_SOUND_CARD=1
+#SOUNDMODEM_SPEAKER_VOLUME=80%
+#SOUNDMODEM_MIC_VOLUME=80%
+#SOUNDMODEM_MIC_AGC=off
 
 # Default nexus server configuration
 # If your local environment differs uncomment and change the required setting
