--- a/.env
+++ b/.env
@@ -106,8 +106,8 @@
 # My personal default development configuration
 # This section can be safely removed
 # Configuration for Cockpit Dev Environment
-RNS_AUTOSTART=False
-NOMADNET_AUTOSTART=False
+RNS_AUTOSTART=True
+NOMADNET_AUTOSTART=True
 DIREWOLF_AUTOSTART=False
 SOUNDMODEM_AUTOSTART=False
 NEXUS_COMPOSE_HOME=~/nexus_cockpit
