--- a/nexus_root/.direwolf/direwolf.conf
+++ b/nexus_root/.direwolf/direwolf.conf
@@ -1,3 +1,13 @@
+ADEVICE plughw:1,0 plughw:1,0
+CHANNEL 0
+MYCALL NO1CALL
+MODEM 1200
+# PTT /dev/ttyUSB1 RTS
+DWAIT 10
+KISSPORT 8001
+
+PBEACON delay=0:10 every=30 overlay=S symbol="/-" lat=49^52.20 long=8^37.30 power=8 height=20 gain=2 dest=CQ messaging=1 comment="BSB RNS Test Station Darmstadt"
+
 #############################################################
 #                                                           #
 #               Configuration file for Dire Wolf            #
