--- a/nexus_root/.direwolf/direwolf.conf
+++ b/nexus_root/.direwolf/direwolf.conf
@@ -4,7 +4,7 @@ MYCALL NO1CAL
 MODEM 1200
 # PTT /dev/ttyUSB1 RTS
 DWAIT 10
-KISSPORT 8001
+# KISSPORT 8001
 
 PBEACON delay=0:10 every=30 overlay=S symbol="/-" lat=49^52.20 long=8^37.30 power=8 height=20 gain=2 dest=CQ messaging=1 comment="BSB RNS Test Station Darmstadt"
 
