--- a/nexus_root/.direwolf/direwolf.conf
+++ b/nexus_root/.direwolf/direwolf.conf
@@ -80,7 +80,7 @@
 # To use something other than the default, generally use plughw
 # and a card number reported by "arecord -l" command.  Example:
 
-# ADEVICE  plughw:1,0
+ADEVICE  plughw:1,0
 
 # You can also use "-" or "stdin" to pipe stdout from
 # some other application such as a software defined radio.
@@ -205,6 +205,11 @@ MODEM 1200
 #DCD COM1 -DTR
 #DCD GPIO 24
 
+DWAIT 10
+SLOTTIME 30
+PERSIST 160
+TXDELAY 50
+TXTAIL 10
 
 #############################################################
 #                                                           #
