--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-arm64
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-arm64
@@ -137,4 +137,4 @@ EXPOSE $NEXUS_CONTAINER_WEB_PORT
 ENV NEXUS_CONTAINER_API_PORT 4281
 EXPOSE $NEXUS_CONTAINER_API_PORT
 
-ENTRYPOINT ["entrypoint.sh"]
+ENTRYPOINT entrypoint.sh
