--- a/nexus_root/.direwolf/direwolf.conf
+++ b/nexus_root/.direwolf/direwolf.conf
@@ -92,7 +92,7 @@ KISSPORT 8001
 # The others are kept local.
 #
 
-OBEACON delay=0:30 every=1 OBJNAME=Nexus lat=0^0.0 long=0^0.0 FREQ=26.686 dest=CQ messaging=1 comment="CB.CH52 Nexus Beacon"
+OBEACON delay=0:30 every=1 OBJNAME=Nexus lat=0^0.0 long=0^0.0 FREQ=26.686 dest=CQ comment="CB.CH52 Nexus Beacon"
 
 
 #PBEACON delay=1  every=30 overlay=S symbol="digi" lat=42^37.14N long=071^20.83W power=50 height=20 gain=4 comment="Chelmsford MA" via=WIDE1-1,WIDE2-1
