--- a/nexus_root/.direwolf/direwolf.conf
+++ b/nexus_root/.direwolf/direwolf.conf
@@ -1,116 +1,48 @@
-
-ADEVICE  plughw:1,0
+###########################################
+# Default Konfiguration für interne Soundkarte
+#
+ADEVICE  plughw:0,0
 CHANNEL 0
 MYCALL N1CALL
 
+###########################################
+# RPi4B mit Yaesu FT991A using USB CAT
 #
-# Pick a suitable modem speed based on your situation.
-#	1200 	Most common for VHF/UHF.  Default if not specified.
-#	2400	QPSK compatible with MFJ-2400, and probably PK232-2400 & KPC-2400.
-#	300	Low speed for HF SSB.  Default tones 1600 & 1800.
-#	EAS	Emergency Alert System (EAS) Specific Area Message Encoding (SAME).
-#	9600	G3RUH style - Can't use Microphone and Speaker connections.
-#	AIS	International system for tracking ships on VHF.
-#			Also uses 9600 bps so Speaker connection won't work.
+# ADEVICE  plughw:1,0
+# CHANNEL 0
+# MYCALL N1CALL
+# PTT /dev/ttyUSB1 RTS
+
+###########################################
+# OPI4 mit zwei Millso USB Sound Karten (2 physische Kanäle kein Echo Problem)
 #
-# In most cases you can just specify the speed.  Examples:
-#
+# ADEVICE  plughw:3,0 plughw:2,0
+# MYCALL N1CALL
+# CHANNEL 0
+
+###########################################
+# OPI4 mit einer Millso USB Sound Karte (Echo Problematik)
+# ADEVICE plughw:2,0
+
+###########################################
+# Singnal und Protokoll Konfiguration
 
 MODEM 1200
 #MODEM 9600
 
-# For the PTT command, specify the device and either RTS or DTR.
-# RTS or DTR may be preceded by "-" to invert the signal.
-# Both can be used for interfaces that want them driven with opposite polarity.
+FULLDUP OFF
+
+# DWAIT 10
+# SLOTTIME 30
+# PERSIST 160
+# TXDELAY 50
+# TXTAIL 10
+
+# AGWPORT 8000
+# KISSPORT 8001
+
+###########################################
+# Testbake
 #
-# COM1 can be used instead of /dev/ttyS0, COM2 for /dev/ttyS1, and so on.
-#
-
-# USB PPT to Yaesu FT991A
-# PTT /dev/ttyUSB1 RTS
-
-#PTT COM1 RTS
-#PTT COM1 RTS -DTR
-#PTT /dev/ttyUSB0 RTS
-
-DWAIT 10
-SLOTTIME 30
-PERSIST 160
-TXDELAY 50
-TXTAIL 10
-
-#############################################################
-#                                                           #
-#               TEXT TO SPEECH COMMAND FILE                 #
-#                                                           #
-#############################################################
-
-#SPEECH dwespeak.sh
-
-#############################################################
-#                                                           #
-#               VIRTUAL TNC SERVER PROPERTIES               #
-#                                                           #
-#############################################################
-
-#
-# Dire Wolf acts as a virtual TNC and can communicate with
-# client applications by different protocols:
-#
-#	- the "AGW TCPIP Socket Interface" - default port 8000
-#	- KISS protocol over TCP socket - default port 8001
-#	- KISS TNC via pseudo terminal   (-p command line option)
-#
-
-AGWPORT 8000
-KISSPORT 8001
-
-#
-# It is sometimes possible to recover frames with a bad FCS.
-# This applies to all channels.
-#
-#	0  [NONE] - Don't try to repair.
-#	1  [SINGLE] - Attempt to fix single bit error.  (default)
-#	... see User Guide for more values and in-depth discussion.
-#
-
-#FIX_BITS 0
-
-#
-# Beaconing is configured with these two commands:
-#
-#	PBEACON		- for a position report (usually yourself)
-#	OBEACON		- for an object report (usually some other entity)
-#
-# Each has a series of keywords and values for options.
-# See User Guide for details.
-#
-# Example:
-#
-# This results in a broadcast once every 10 minutes.
-# Every half hour, it can travel via two digipeater hops.
-# The others are kept local.
-#
-
-OBEACON delay=0:30 every=1 OBJNAME=Nexus lat=0^0.0 long=0^0.0 FREQ=26.686 dest=CQ comment="CB.CH52 Nexus Beacon"
-
-
-#PBEACON delay=1  every=30 overlay=S symbol="digi" lat=42^37.14N long=071^20.83W power=50 height=20 gain=4 comment="Chelmsford MA" via=WIDE1-1,WIDE2-1
-#PBEACON delay=11 every=30 overlay=S symbol="digi" lat=42^37.14N long=071^20.83W power=50 height=20 gain=4 comment="Chelmsford MA"
-#PBEACON delay=21 every=30 overlay=S symbol="digi" lat=42^37.14N long=071^20.83W power=50 height=20 gain=4 comment="Chelmsford MA"
-
-# With UTM coordinates instead of latitude and longitude.
-
-#PBEACON delay=1 every=10 overlay=S symbol="digi" zone=19T easting=307477 northing=4720178
-
-#
-# When the destination field is set to "SPEECH" the information part is
-# converted to speech rather than transmitted as a data frame.
-#
-
-#CBEACON dest="SPEECH" info="Club meeting tonight at 7 pm."
-
-# Similar for Morse code.  If SSID is specified, it is multiplied
-# by 2 to get speed in words per minute (WPM).
-
-#CBEACON dest="MORSE-6" info="de MYCALL"
+# OBEACON comment="CB.ch52 Nexus Beacon #1" delay=0:01 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
+# OBEACON comment="CB.ch52 Nexus Beacon #1" delay=0:01 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
