--- a/nexus_root/.direwolf/direwolf.conf
+++ b/nexus_root/.direwolf/direwolf.conf
@@ -42,7 +42,7 @@ FULLDUP OFF
 # KISSPORT 8001
 
 ###########################################
-# Testbake
+# Test Bake
 #
 # OBEACON comment="CB.ch52 Nexus Beacon #1" delay=0:01 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
 # OBEACON comment="CB.ch52 Nexus Beacon #1" delay=0:01 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
