--- a/nexus_root/.direwolf/direwolf.conf
+++ b/nexus_root/.direwolf/direwolf.conf
@@ -15,8 +15,9 @@ MYCALL N1CALL
 
 ###########################################
 # OPI4 mit zwei Millso USB Sound Karten (2 physische Kanäle kein Echo Problem)
+# ADEVICE <input> <output>
 #
-# ADEVICE  plughw:3,0 plughw:2,0
+# ADEVICE plughw:3,0 plughw:2,0
 # MYCALL N1CALL
 # CHANNEL 0
 
@@ -45,4 +46,4 @@ FULLDUP OFF
 # Test Bake
 #
 # OBEACON comment="CB.ch52 Nexus Beacon #1" delay=0:01 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
-# OBEACON comment="CB.ch52 Nexus Beacon #1" delay=0:01 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
+# OBEACON comment="CB.ch52 Nexus Beacon #2" delay=0:01 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
