Direwolf config for separeated sound devices

--- a/.env
+++ b/.env
@@ -60,8 +60,14 @@
 #DIREWOLF_CONFIG=/home/bsb/.direwolf
 #DIREWOLF_AUTOSTART=False
 #DIREWOLF_SOUND_CARD=1
+#DIREWOLF_DUAL_SOUND_CARD=No
+#DIREWOLF_INPUT_SOUND_CARD=1
+#DIREWOLF_OUTPUT_SOUND_CARD=1
+#DIREWOLF_SPEAKER_MUTE=off
 #DIREWOLF_SPEAKER_VOLUME=80%
-#DIREWOLF_MIC_VOLUME=80%
+#DIREWOLF_MIC_MUTE=off
+#DIREWOLF_MIC_VOLUME=0%
+#DIREWOLF_CAPTURE_VOLUME=80%
 #DIREWOLF_MIC_AGC=off
 
 # Default soundmodem configuration
