Direwolf config for separeated sound devices

--- a/.env
+++ b/.env
@@ -65,6 +65,7 @@
 #DIREWOLF_OUTPUT_SOUND_CARD=1
 #DIREWOLF_MIC_CAPTURE_SWITCH=on
 #DIREWOLF_MIC_CAPTURE_VOLUME=80%
+#DIREWOLF_MIC_PLAYBACK_SWITCH=off
 #DIREWOLF_MIC_PLAYBACK_VOLUME=0%
 #DIREWOLF_AUTO_GAIN_CONTROL=off
 #DIREWOLF_SPEAKER_PLAYBACK_SWITCH=on
