Direwolf config for separeated sound devices

--- a/.env
+++ b/.env
@@ -107,8 +107,6 @@
 # Configuration for Cockpit Dev Environment
 #RNS_AUTOSTART=True
 #NOMADNET_AUTOSTART=True
-#DIREWOLF_AUTOSTART=False
-#SOUNDMODEM_AUTOSTART=False
 #NEXUS_COMPOSE_HOME=~/nexus_cockpit
 #NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
 #NEXUS_IMAGE=bsbdock/nexus:dev
@@ -124,3 +122,16 @@
 #NEXUS_ROLE={"cluster":"cockpit"}
 #NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
 #NEXUS_COMMAND=start_nexus.sh
+DIREWOLF_CONFIG=/home/bsb/.direwolf
+DIREWOLF_AUTOSTART=False
+DIREWOLF_SOUND_CARD=1
+DIREWOLF_DUAL_SOUND_CARD=Yes
+DIREWOLF_INPUT_SOUND_CARD=2
+DIREWOLF_OUTPUT_SOUND_CARD=3
+DIREWOLF_MIC_CAPTURE_SWITCH=on
+DIREWOLF_MIC_CAPTURE_VOLUME=80%
+DIREWOLF_MIC_PLAYBACK_SWITCH=off
+DIREWOLF_MIC_PLAYBACK_VOLUME=0%
+DIREWOLF_AUTO_GAIN_CONTROL=off
+DIREWOLF_SPEAKER_PLAYBACK_SWITCH=on
+DIREWOLF_SPEAKER_PLAYBACK_VOLUME=80%
