Direwolf config for separeated sound devices

--- a/.env
+++ b/.env
@@ -108,8 +108,8 @@
 #RNS_AUTOSTART=True
 #NOMADNET_AUTOSTART=True
 #NEXUS_COMPOSE_HOME=~/nexus_cockpit
-#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
-#NEXUS_IMAGE=bsbdock/nexus:dev
+NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
+NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
 #NEXUS_CONTAINER=nexus-cockpit
 #NEXUS_CONTAINER_ALIAS=nexus-cockpit
 #NEXUS_NETWORK=nexus-cockpit_net
