Direwolf config for separeated sound devices

--- a/.env
+++ b/.env
@@ -123,7 +123,7 @@ NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
 #NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
 #NEXUS_COMMAND=start_nexus.sh
 DIREWOLF_CONFIG=/home/bsb/.direwolf
-DIREWOLF_AUTOSTART=False
+DIREWOLF_AUTOSTART=True
 DIREWOLF_SOUND_CARD=1
 DIREWOLF_DUAL_SOUND_CARD=Yes
 DIREWOLF_INPUT_SOUND_CARD=2
